# rust-experiments

./: .env.example  .gitignore  .markdownlint.json  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  requests.http
frontend/: index.html  index.js  package-lock.json  package.json
migrations/2020-07-16-160631_create_employees/: up.sql
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
rust-wasm/tests/: web.rs
src/: main.rs
src/employees/: model.rs
src/libs/algebra-matrix2x2/: Cargo.toml
