[package]
name = "rust-api"
version = "0.1.0"
authors = ["Ion Cretu <cretuion94@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
listenfd = "0.3.3"
serde = "1.0.114"
serde_json = "1.0.56"
diesel = { version = "1.4.1", features = ["postgres", "r2d2", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
env_logger = "0.7.1"
lazy_static = "1.4.0"
log = "0.4.11"
r2d2 = "0.8.9"
uuid = { version = "0.8", features = ["serde", "v4"] }